<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能马桶</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">连接</string>
    <string name="disconnected">断开</string>
    <string name="title_devices">设备列表</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="health_center_action_bar_title">个人健康中心</string>
    <string name="weight_manager">体重管理</string>
    <string name="body_composition_detection">体成分检测</string>
    <string name="body_fat">体脂测量</string>
    <string name="urine_test">尿检单元</string>
    <string name="heart_rate">心率监测</string>
    <string name="start_test">开始检测</string>
    <string name="test_result">检测结果</string>
    <string name="life_advice">指导意见:</string>
    <string name="zhidaoyijian"></string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="device_name_default">Device Name</string>
    <string name="receive_byte">Recv Bytes：</string>
    <string name="data_format_default">Ascii</string>
    <string name="data_format_hex">Hex</string>
    <string name="clean">clean</string>
    <string name="send_byte">Send Bytes：</string>
    <string name="send">send</string>
    <string name="scan_ble_device">Scan BLE Device</string>
    <string name="device_name">name</string>
    <string name="device_address">address</string>
    <string name="scanning">Scanning......</string>
    <string name="zero">0</string>
    <string name="speed">0 B/s</string>
    <string name="ble_need_location">Android6.0蓝牙需要开启</string>
    <string name="about_weight_chart">About Weight Chart</string>
    <string name="add">Add</string>
    <string name="all_entries_deleted">All entries are now deleted</string>
    <string name="average">Average of last seven days</string>
    <string name="bmi_value">BMI: %.2f</string>
    <string name="bmi_with_height">BMI (height: %s)</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="cm">cm</string>
    <string name="count_entries">Count entries</string>
    <string name="date_legend">Day of week and day of month</string>
    <string name="delete">Delete</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="drag_chart_to_scroll">Drag chart to scroll</string>
    <string name="edit">Edit</string>
    <string name="end_date_input">End date:</string>
    <string name="entries">Entries</string>

    <plurals name="entry_count">
        <item quantity="one">1 entry</item>
        <item quantity="other">%d entries</item>
    </plurals>

    <string name="entry_edited">Entry edited</string>
    <string name="export">Export</string>
    <string name="export_csv">Export entries as CSV</string>
    <string name="export_ods">Export entries as ODS</string>
    <string name="export_png">Export chart as PNG</string>
    <string name="exported_to">Exported to %s</string>
    <string name="failed_open_file">Failed to open or read from file %s</string>
    <string name="failed_save_file">Failed to create or write to file %s</string>
    <string name="file_input">File:</string>
    <string name="file_not_found">File not found: %s</string>
    <string name="free_software_license">Free software license</string>
    <string name="ft">ft</string>
    <string name="height">Height</string>
    <string name="height_cm">%d cm</string>
    <string name="height_ft" formatted="false">%d ft %d in</string>
    <string name="height_input">Height:</string>
    <string name="height_unit">Height unit</string>
    <string name="height_unit_input">Height unit:</string>

    <string-array name="height_unit_labels">
        <item>centimeter</item>
        <item>foot</item>
    </string-array>
    <string-array name="height_unit_values">
        <item>cm</item>
        <item>ft</item>
    </string-array>

    <string name="import_">Import</string>
    <string name="import_csv">Import entries from CSV</string>
    <string name="imported_from">Imported from %s</string>
    <string name="in">in</string>
    <string name="invalid_days">Invalid number of days</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="invalid_height">Invalid height</string>
    <string name="invalid_size">Invalid size</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="legend">Legend</string>
    <string name="license_description">Weight Chart v2\nCopyright 2011\n\nWeight Chart is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nWeight Chart is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nSee http://www.gnu.org/licenses/</string>
    <string name="license_summary">GNU General Public License version 3 or later</string>
    <string name="media_not_available">SD card is not available</string>
    <string name="menu_file">File</string>
    <string name="no_entries">No entries</string>
    <string name="days_input">Number of days to show:</string>
    <string name="ok">OK</string>
    <string name="preferences">Preferences</string>
    <string name="question_delete_all">Delete all entries? This cannot be undone.</string>
    <string name="set_manually">Set manually</string>
    <string name="share_file">Share file</string>
    <string name="size_input">Size:</string>
    <string name="skip">Skip</string>
    <string name="st">st</string>
    <string name="tap_to_open_menu">Tap to open menu</string>
    <string name="time">Time</string>
    <string name="transparency">Transparency</string>
    <string name="view">View</string>
    <string name="view_14_days">View 14 days</string>
    <string name="view_21_days">View 21 days</string>
    <string name="view_30_days">View 30 days</string>
    <string name="view_60_days">View 60 days</string>
    <string name="view_90_days">View 90 days</string>
    <string name="view_7_days">View 7 days</string>
    <string name="website">Website</string>
    <string name="website_url">http://www.senselesssolutions.com/android/weightchart</string>
    <string name="website_url_origin">http://fredrik.jemla.eu/weightchart</string>

    <string-array name="weekdays">
        <item>mo</item>
        <item>tu</item>
        <item>we</item>
        <item>th</item>
        <item>fr</item>
        <item>sa</item>
        <item>su</item>
    </string-array>

    <string name="weight">Weight</string>
    <!-- Added by aitorthered@senselesssolutions -->
    <string name="weight_goal">Weight goal</string>
    <string name="weight_max">Weight alert (maximum weight)</string>
    <string name="weight_goal_input">Input your goal weight</string>
    <string name="weight_max_input">Input your maximum weight</string>
    <string name="ad_goal_weight_title">Goal Weight</string>
    <string name="ad_max_weight_title">Maximum Weight</string>
    <string name="alert_dialog_ok">Accept</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="watch_weight">Watch your weight!</string>
    <string name="max_weight_label">Max Weight</string>
    <string name="max_weight_alert">You are over the weight!</string>
    <string name="goal_weight_label">Goal Weight</string>
    <string name="market_url">market://details?id=es.senselesssolutions.gpl.weightchart</string>
    <string name="market">Weight Chart on Android Market</string>
    <string name="market_url_author">market://search?q=pub:aitorTheRed@senselesssolutions</string>
    <string name="market_author">More from this developer</string>
    <string name="about_wc_summary">Based on a GPL source code</string>
    <string name="about_wc">About Weight Chart</string>
    <string name="about_description" formatted="false">    	This application is a modification of a GNU-license application:\n
    	http://fredrik.jemla.eu/weightchart\n
    	I just wanted to add a few features, so I downloaded the code and added them :-).
    	If you have any problem, please, contact the developer:
    	weightchart@senselesssolutions.com</string>
    <string name="translate_summary">Do you want Weight Chart in your own language? Press here to help us translate
    	the texts (you will appear in the credits)</string>
    <string name="translate">Help us translate!</string>
    <string name="translate_email">translate-weightchart@senselesssolutions.com</string>
    <string name="translate_email_subject">Translate to [your language] [Weight Chart]</string>
    <string name="translate_email_text" formatted="false">Hello! I want to help you translate Weight Chart to my language.
    		Just drop me an email and I will answer as soon as possible :-)</string>
    <!-- ^Added by aitorthered@senselesssolutions -->
    <string name="weight_added">Weight added</string>
    <string name="weight_kg">%.1f kg</string>
    <string name="weight_kg_legend">First weight of the day (kg)</string>
    <string name="weight_lb">%.1f lb</string>
    <string name="weight_lb_legend">First weight of the day (lb)</string>
    <string name="weight_st" formatted="false">%d st %.1f lb</string>
    <string name="weight_st_legend">First weight of the day (st)</string>
    <string name="weight_unit">Weight unit</string>

    <!--尿液检测-->
    <string name="normal">正常指标</string>
    <string name="component">成分</string>
    <string name="Analysis_report_of_urine_test">尿液检测分析报告</string>
    <string name="compare_with_standard">与正常指标对比增幅</string>
    <string name="pH">酸碱度(pH)</string>
    <string name="pH_standard">4.5~8.0</string>
    <string name="NIT">亚硝酸盐(NIT)</string>
    <string name="NIT_standard">—  阴性</string>
    <string name="GLU">葡萄糖(GLU)</string>
    <string name="GLU_standard">—  阴性</string>
    <string name="VC">维生素C(VC)</string>
    <string name="VC_standard">—  阴性</string>
    <string name="SG">尿比重(SG)</string>
    <string name="SG_standard">1.015~1.025</string>
    <string name="BLD">隐血(BLD)</string>
    <string name="BLD_standard">—  阴性</string>
    <string name="PRO">蛋白质(PRO)</string>
    <string name="PRO_standard">—  阴性</string>
    <string name="BIL">胆红素(BIL)</string>
    <string name="BIL_standard">—  阴性</string>
    <string name="URO">尿胆原(URO)</string>
    <string name="URO_standard">—  阴性(或弱阳性)</string>
    <string name="KET">酮体(KET)</string>
    <string name="KET_standard">—  阴性</string>
    <string name="WBC">白细胞(WBC)</string>
    <string name="WBC_standard">—  阴性</string>
    <string name="improtant">重要指标</string>
    <string name="up1">高于标准</string>
    <string name="down1">低于标准</string>

    <string-array name="weight_unit_labels">
        <item>kilogram</item>
        <item>pound</item>
        <item>stone</item>
    </string-array>
    <string-array name="weight_unit_values">
        <item>kg</item>
        <item>lb</item>
        <item>st</item>
    </string-array>

</resources>