<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <cn.hfiti.toiletapp.view.CustomActionBar
        android:id="@+id/urine_test_action_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:left_button_drawable="@drawable/back"
        app:right_button_visible="false"
        app:title_background_color="@drawable/face_top"
        app:title_text="@string/urine_test" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/Analysis_report_of_urine_test" />

        <View
            android:background="@color/black"
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/report_title" />

        <LinearLayout
            android:id="@+id/test_report_tile"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:background="#30008B45"
            android:layout_below="@+id/view1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/component" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_result" />

        </LinearLayout>

        <View
            android:background="@color/black"
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/test_report_tile" />

        <LinearLayout
            android:id="@+id/report_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view2"
            android:layout_above="@+id/view3"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:weightSum="3">

            <cn.hfiti.toiletapp.view.UrineReportItem
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                app:tv1_text="@string/pH"
                app:tv2_text="@string/NIT"
                app:tv3_text="@string/GLU"
                app:tv4_text="@string/VC"
                app:tv5_text="@string/SG"
                app:iv6_drawable="@drawable/important"
                app:tv6_text="@string/BLD"
                app:iv7_drawable="@drawable/important"
                app:tv7_text="@string/PRO"
                app:tv8_text="@string/BIL"
                app:tv9_text="@string/URO"
                app:tv10_text="@string/KET"
                app:tv11_text="@string/WBC" />

            <View
                android:background="@color/black"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <cn.hfiti.toiletapp.view.UrineReportItem
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                app:tv1_text="@string/pH_standard"
                app:tv2_text="@string/NIT_standard"
                app:tv3_text="@string/GLU_standard"
                app:tv4_text="@string/VC_standard"
                app:tv5_text="@string/SG_standard"
                app:tv6_text="@string/BLD_standard"
                app:tv7_text="@string/PRO_standard"
                app:tv8_text="@string/BIL_standard"
                app:tv9_text="@string/URO_standard"
                app:tv10_text="@string/KET_standard"
                app:tv11_text="@string/WBC_standard" />

            <View
                android:background="@color/black"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <cn.hfiti.toiletapp.view.UrineReportItem
                android:id="@+id/test_result"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

        </LinearLayout>

        <View
            android:background="@color/black"
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/start_test" />

        <RelativeLayout
            android:id="@+id/start_test"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/start_test">

            <ImageView
                android:contentDescription="@string/compare_with_standard"
                android:id="@+id/important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/important_text"
                android:src="@drawable/important" />

            <TextView
                android:text="@string/improtant"
                android:id="@+id/important_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/up1"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true" />

            <ImageView
                android:contentDescription="@string/compare_with_standard"
                android:id="@+id/up1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/up1_text"
                android:layout_centerVertical="true"
                android:src="@drawable/up1" />

            <TextView
                android:id="@+id/up1_text"
                android:text="@string/up1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/down1"
                android:layout_centerVertical="true" />

            <ImageView
                android:contentDescription="@string/compare_with_standard"
                android:id="@+id/down1"
                android:layout_toStartOf="@+id/down1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/down1" />

            <TextView
                android:id="@+id/down1_text"
                android:text="@string/down1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/advice"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_advice"
            android:textStyle="italic"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <TextView
            android:padding="16dp"
            android:textSize="16sp"
            android:id="@+id/life_advice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/advice"
            android:background="@drawable/advice_back"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>
</LinearLayout>