<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <cn.hfiti.toiletapp.view.CustomActionBar
        android:id="@+id/health_center_action_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:left_button_drawable="@drawable/back"
        app:right_button_visible="false"
        app:title_background_color="@color/blue_new"
        app:title_text="@string/health_center_action_bar_title"/>

    <LinearLayout
        android:id="@+id/health_center_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/weight_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/health_button_corner_green"
                android:text="@string/weight_manager"
                style="?android:attr/buttonBarButtonStyle"  
                android:textSize="24sp"/>
            
            <Button
                android:id="@+id/heart_rate_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/health_button_corner_red"
                android:text="@string/heart_rate" 
                style="?android:attr/buttonBarButtonStyle" 
                android:textSize="24sp"/>

            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/body_composition_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/health_button_corner_blue"
                android:text="@string/body_composition_detection"
                android:textSize="24sp" />
            
            <Button
                android:id="@+id/urine_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
				android:layout_marginStart="20dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/health_button_corner_yellow"
                android:text="@string/urine_test" 
                style="?android:attr/buttonBarButtonStyle" 
                android:textSize="24sp"/>
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>