<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BleSppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/data_edit_box"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/view_normal_margin"
            android:background="@drawable/edit_box_bg"
            android:gravity="left|top"
            android:hint=""
            android:inputType="textMultiLine"
            android:textSize="@dimen/small_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_normal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_byte"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/byte_send_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_small_margin"
                android:text="@string/zero"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/small_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0" />

            <TextView
                android:id="@+id/data_sended_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_format_default"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:id="@+id/clean_text_btn"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/normal_btn_bg"
                android:gravity="center"
                android:text="@string/clean"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:id="@+id/send_data_btn"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/normal_btn_bg"
                android:gravity="center"
                android:text="@string/send"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/view_small_margin"
        android:layout_weight="1.8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/data_read_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:background="@drawable/edit_box_bg"
            android:maxLines="10000"
            android:scrollbars="vertical"
            android:textSize="@dimen/small_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_normal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_byte"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/byte_received_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_small_margin"
                android:text="@string/zero"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/small_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7" />

            <TextView
                android:id="@+id/notify_speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/small_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4" />

            <TextView
                android:id="@+id/data_received_format"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_format_default"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:id="@+id/clean_data_btn"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/normal_btn_bg"
                android:gravity="center"
                android:text="@string/clean"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
